--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,22 @@
 default: &default
   adapter: mysql2
-  encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
-  username: root
-  password:
   socket: /tmp/mysql.sock
 
 development:
   <<: *default
+  username: root
+  password:
   database: events_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: 
   <<: *default
   database: events_test
 
 production:
   <<: *default
-  database: events_production
+  url: <%= ENV['CLEARDB_DATABASE_URL'] %>
